# XRender

./: .gitignore  App.cpp  CMakeLists.txt  ReadME.md  build.bat  build.sh  build_vs2017.ps1  compile_commands.json  main.cpp  output.tga
ImageOut/: Diffuse.tga  SampleTriangle.tga  Shadow.tga  TestXRenderLoop.tga  debug_shadowmap.tga
Notes/: DrawLine.md  Record.md
PostProcessing/: PS_ShowDepth.hpp  PostProcessInc.h
Shaders/: ColorShader.hpp  DiffuseColor.hpp  Lighting.hpp  PixelLambert.hpp  Shader.hpp
cmake/: FindSDL2.cmake
code/: CMakeLists.txt  includes.h
code/DemoApp/: CMakeLists.txt  TestScene.cpp  TestScene.h  XMain.cpp
code/TestCpp/: CMakeLists.txt  Test.cpp
code/app/: CMakeLists.txt  XApp.cpp  XApp.h  XMain.cpp  includes.h
code/core/Object/: Cube.cpp  Cube.h  Object.cpp  Object.h
code/core/Objects/: Cube.cpp  Cube.h  Triangle.cpp  Triangle.h
code/core/Render/: Material.h  Rasterization.h  RenderContext.cpp  RenderContext.h  Renderer.h  Shader.cpp  Shader.h
code/core/basic/: BaseObject.cpp  BaseObject.h  Behavior.cpp  Behavior.h  Camera.cpp  Mesh.h  Object.cpp  Object.h  Util.cpp  Util.h  Vectex.h  Vertex.h  camera.h
code/core/math/: EulerAngles.cpp  EulerAngles.h  MathUtil.cpp  MathUtil.h  Matrix4x3.cpp  Matrix4x3.h  Quaternion.cpp  Quaternion.h  RMath.h  RotationMatrix.cpp  RotationMatrix.h  Vector3.h
code/core/primitive/: DrawLine.cpp  DrawPoint.cpp  PrimitiveUtil.cpp  PrimitiveUtil.h  Triangle.h  Vertex.h  XPoint.h
code/test/: CMakeLists.txt  helloSDL.cpp
include/: ImageRenderContext.h  MVP.h  Pipeline.h  Platform.h  line.h  triangle.h
src/: Bounds.cpp  Bounds.h  CMakeLists.txt  CVVClip.hpp  Camera.cpp  Camera.h  Color.cpp  Color.h  Cull.cpp  Cull.h  Graphics.cpp  Graphics.h  GraphicsEnum.h  GraphicsGlobalData.cpp  GraphicsGlobalData.h  GraphicsUtils.cpp  GraphicsUtils.h  GraphicsUtils.hpp  ImageRenderContext.cpp  Lighting.cpp  Lighting.h  Matrial.h  Mesh.cpp  Mesh.h  NoCopyable.h  Object.cpp  Object.h  OrbitControls.cpp  OrbitControls.h  Pipeline.cpp  Pipeline.h  Rasterizer.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  (+35 more)
src/PostProcess/: PostProcess.cpp  PostProcess.h  PostProcessContext.cpp  PostProcessContext.h  PostProcessEffect.h
src/Shapes/: Capsule.cpp  Capsule.h  Cube.cpp  Cube.h  Panel.cpp  Panel.h  Shape.h  ShapeData.cpp  ShapeData.h  Sphere.cpp  Sphere.h
src/math/: Math.cpp  Math.h
src/platform/common/: Platform.cpp  Platform.h
src/platform/image/: ImageDevice.cpp  ImageDevice.h  ImageRenderTarget.cpp  ImageRenderTarget.h
src/platform/win/: WindowsDevice.cpp  WindowsDevice.h  WindowsRenderTarget.cpp  WindowsRenderTarget.h
src/resources/: ILoader.h  IO.cpp  IO.h  IResource.h  MeshLoader.cpp  MeshLoader.h  Resources.cpp  Resources.h  Texture2DLoader.cpp  Texture2DLoader.h
test/: CMakeLists.txt  SelfRef.cpp  TestMath.cpp  TestRef.cpp  TestStruct.cpp  test_color_shader.h  test_create_scene.h  test_diffuse_color_shader.h  test_lambert_lighting.cpp  test_model_shader.h  test_pipeline.h  test_random_color_shader.h  test_shadow.cpp  test_util.h  test_xrender_loop.cpp
tgaimage/: tgaimage.h
